gcc/testsuite/rust/rustc/ui/terminal-width/non-whitespace-trimming.rs
// ignore-tidy-linelength

fn main() {
    let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = 42; let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = ();
// { dg-error ".E0308." "" { target *-*-* } .-1 }
}

